# proof_of_custody

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Player.cpp  Player.x  README.md  Setup.cpp  cbft_README.md  cbft_compile.sh  cbft_install_deps.sh  cbft_run.sh  clean.sh  compile.sh  compile_and_test.sh  config.h  gen_certs.sh  gen_networkdata.sh  gen_sharing.sh  gen_sharing1.sh  hosts.csv  init.sh  install_deps.sh  install_deps_cbft.sh  kill.sh  log1  log2  main.cpp  main.x  mainfork  mainfork-sbft  mainfork.cpp  plot.py  pre_compile.sh  pre_install.sh  run.sh  run_all_in_single_node.sh  run_bft_server.sh  runbatch.sh  runfork-sbft.sh  (+10 more)
BMR/: Key.h  RealProgramParty.hpp  Register.h  Register.hpp
BMR/network/: Client.h  Node.h
Data/: NetworkData.txt  SharingData.txt
Exceptions/: Exceptions.h
FHE/: AddableVector.h  Ciphertext.h  DiscreteGauss.h  FFT.h  FFT_Data.h  FHE_Params.h  NoiseBounds.h  PPData.h  Plaintext.h  Random_Coins.h  Ring_Element.h  Rq_Element.h
GC/: CcdPrep.h  CcdShare.h  FakeSecret.h  Instruction.h  Machine.hpp  MaliciousCcdShare.h  MaliciousRepSecret.h  NoShare.h  PersonalPrep.hpp  Processor.h  Processor.hpp  Program.hpp  Rep4Secret.h  RepPrep.h  RepPrep.hpp  RuntimeBranching.h  Secret.h  Secret.hpp  SemiHonestRepPrep.cpp  SemiHonestRepPrep.h  SemiPrep.cpp  SemiPrep.h  SemiSecret.h  ShareParty.h  ShareParty.hpp  ShareSecret.h  ShareSecret.hpp  ShareThread.h  ShareThread.hpp  Thread.h  Thread.hpp  ThreadMaster.hpp  TinierPrep.h  TinierSecret.h  TinierShare.h  TinierSharePrep.h  TinierSharePrep.hpp  TinyMC.cpp  TinyMC.h  TinyPrep.h  (+11 more)
Input_Output/: Input_Output_Base.h  Input_Output_Simple.cpp  Input_Output_Simple.h
LSSS/: Open_Protocol.cpp  PRSS.cpp  PRSS.h  Share.cpp  Share.h
Machines/: SPDZ.hpp  SPDZ2k.hpp  ShamirMachine.h  ShamirMachine.hpp
Math/: Bit.cpp  Bit.h  BitVec.cpp  BitVec.h  FixedVec.h  Integer.h  Integer.hpp  Lagrange.cpp  Lagrange.h  Square.h  Square.hpp  ValueInterface.h  Z2k.h  Z2k.hpp  Zp_Data.cpp  Zp_Data.h  bigint.cpp  bigint.h  bigint.hpp  bls12_381.cpp  bls12_381.h  field_types.h  fixint.h  gf2n.cpp  gf2n.h  gf2nlong.cpp  gf2nlong.h  gfp.h  gfp.hpp  gfpvar.cpp  gfpvar.h  modp.h  modp.hpp  mpn_fixed.h
Networking/: CryptoPlayer.cpp  CryptoPlayer.h  Player.cpp  Player.h  Server.cpp  Server.h  ServerSocket.cpp  ServerSocket.h  data.h  sockets.cpp  sockets.h  ssl_sockets.h
OT/: BaseOT.cpp  BitMatrix.h  BitMatrix.hpp  MamaRectangle.h  NPartyTripleGenerator.h  NPartyTripleGenerator.hpp  OTCorrelator.hpp  OTExtension.cpp  OTMultiplier.h  OTMultiplier.hpp  Rectangle.h  Rectangle.hpp  TripleMachine.h  square128.cpp
Offline/: FakePrep.h  offline.cpp  offline.h  offline2.cpp  offline_IO_production.cpp  offline_IO_production.h  offline_IO_production2.cpp  offline_data.cpp  offline_data.h  offline_phases.cpp  offline_phases.h  offline_phases2.cpp
Online/: Group.cpp  Group.h  Machine.cpp  Machine.h  Online.cpp  Online.h  Online2.cpp  Online2.cpp-backup  Online2.cppx  OnlineOp.cpp  OnlineOp.h  Online_op.cpp  Online_op.h  bls.cpp  bls.h  poc.cpp  poc.h  vss.cpp  vss.h
POC/: Complex.h  Group.h  Group.hpp  Helper.h  OnlineOp.h  OnlineOp.hpp  OnlineOp.test.hpp  RunPoc.h  RunPoc.hpp  bls.cpp  bls.h  mascot-example.cpp  poc.h  poc.hpp  vss.cpp  vss.h
Processor/: BaseMachine.cpp  BaseMachine.h  Binary_File_IO.h  Binary_File_IO.hpp  DataPositions.cpp  Data_Files.h  Data_Files.hpp  DummyProtocol.h  ExternalClients.cpp  ExternalClients.h  FixInput.cpp  Input.h  Input.hpp  InputTuple.h  Instruction.cpp  Instruction.h  Instruction.hpp  Instruction.hpp.orig.h  IntInput.hpp  Machine.h  Machine.hpp  Memory.cpp  Memory.h  Memory.hpp  NoLivePrep.h  NoProtocol.h  OfflineMachine.hpp  Online-Thread.h  Online-Thread.hpp  OnlineMachine.h  OnlineMachine.hpp  OnlineOptions.cpp  OnlineOptions.h  PrepBase.cpp  Processor.cpp  Processor.h  Processor.hpp  Processor2.cpp  ProcessorBase.cpp  ProcessorBase.h  (+10 more)
Programs/0add/: 0add-0.bc  0add.mpc  0add.sch
Programs/0div/: 0div-0.bc  0div.mpc  0div.sch
Protocols/: Beaver.h  Beaver.hpp  ChaiGearPrep.h  ChaiGearPrep.hpp  CowGearPrep.h  CowGearPrep.hpp  FakeInput.h  FakePrep.h  FakeProtocol.h  FakeShare.h  HemiPrep.h  HemiPrep.hpp  HemiShare.h  HighGearKeyGen.h  HighGearKeyGen.hpp  LowGearKeyGen.h  LowGearKeyGen.hpp  MAC_Check.h  MAC_Check.hpp  MAC_Check_Base.h  MalRepRingPrep.h  MalRepRingPrep.hpp  MaliciousRepMC.h  MaliciousRepPrep.h  MaliciousRepPrep.hpp  MaliciousRingPrep.hpp  MaliciousShamirMC.h  MaliciousShamirPO.hpp  MamaPrep.h  MascotPrep.h  MascotPrep.hpp  PostSacrifice.h  Rep3Share.h  Rep3Share2k.h  Rep4.h  Rep4Input.h  Rep4Input.hpp  Rep4Share.h  Rep4Share2k.h  RepRingOnlyEdabitPrep.h  (+46 more)
RunTime/: RunPoc.cpp  RunPoc.h  poc.cpp  poc.h
Scripts/: bmr-program-run.sh  build.sh  ccd.sh  direct_compilation_example.py  emulate.sh  mal-ccd.sh  run-common.sh  setup-ssl.sh  test_tutorial.sh  yao.sh
Source/: ipc_msg.h  mascot_example.cpp  poc_args.h  poc_main.cpp  poc_main2fork.cpp  poc_online_op_test.cpp
System/: Networking.cpp  Networking.h  Player.cpp  Player.h  RunTime.cpp  RunTime.h  SSLUtil.cpp  SSLUtil.h  SystemData.cpp  SystemData.h
Tools/: BitVector.cpp  BitVector.h  Buffer.cpp  Buffer.h  Bundle.h  Crypto.cpp  Crypto.h  Exceptions.cpp  Exceptions.h  MMO.cpp  MMO.h  MMO.hpp  OfflineMachineBase.cpp  OfflineMachineBase.h  SwitchableOutput.h  Timer.h  WaitQueue.h  aes-ni.cpp  aes.h  avx_memcpy.h  cpu_support.h  ezOptionParser.h  names.cpp  octetStream.cpp  octetStream.h  parse.h  random.cpp  random.h  util_containers.h
cmake/: Findrelic.cmake
programs/: CMakeLists.txt  main.cpp  mainfork.cpp  ud_client.h
programs/sbft/: CMakeLists.txt  client.cpp  common.h  mainfork-sbft-client.cpp  mainfork-sbft.cpp  server.cpp  server_request.hpp  utils.cpp
scripts/: gen_certs.sh  gen_networkdata.sh  gen_sharing.sh  gen_sharing1.sh  run_program.sh
src/: config.h
vm/: schema.md  vm_run_single.sh  vm_run_single_batch.sh  vm_run_wan.sh  vm_run_wan_simulator.sh
wm_scripts/: wm_pocconfig.sh  wm_pocconfiglan.sh  wm_pocgetlogs.sh  wm_pocinit.sh  wm_pockill.sh  wm_pocrun.sh  wm_pocupload.sh  wm_readme.md
(+55 files in other folders)
